# empi

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  compose.debug.yml  compose.production.yml  compose.yml  docker-compose.debug.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: deploy.yml  pre-commit.yml
docker/: Caddyfile  start.sh
docker/empi-web/: constants.ts
docker/patches/: settings.py.patch  svelte.config.js.patch
docker/s6/gunicorn/: run
docker/s6/migrations/: up
docker/s6/node/: run
docs/: diagrams.mdj  diagrams_old.xmi
docs/images/: diagrams.xmi
empi-server/: .gitignore  start_dev.sh
empi-server/emails/: apps.py  models.py  serializers.py  types.py  views.py
empi-server/emails/migrations/: 0001_initial.py  0002_initial.py  0003_email_is_sent.py  0004_remove_email_body_email_context_email_template_name.py  0005_alter_email_research.py  0006_alter_email_send_when.py
empi-server/emails/templates/: admin_created.html  base.html  email.html  password_reset.html  research.html  research_created.html  research_info.html  signup.html  signup_created.html  signup_deleted.html
empi-server/empi_server/: api.py  constants.py  fields.py  settings.py  urls.py
empi-server/empi_settings/: admin.py  apps.py  models.py  serializers.py  views.py
empi-server/empi_settings/migrations/: 0001_initial.py  0002_add_default_settings.py
empi-server/research/: admin.py  apps.py  auth.py  fields.py  models.py  permissions.py  schema.py  serializers.py  views.py
empi-server/research/migrations/: 0001_initial.py  0002_initial.py  0003_alter_encryptedsessionkey_admin.py  0003_rename_protected_research_is_protected_and_more.py  0004_alter_research_points_alter_research_uuid.py  0004_alter_research_pubkey.py  0004_auto_20240422_2134.py  (+23 more)
empi-server/users/: admin.py  apps.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
empi-server/utils/: keys.py
empi-web/: eslint.config.js  eslint.config.mjs  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
empi-web/src/: app.d.ts  app.html  hooks.server.ts  hooks.ts
empi-web/static/: style.css  vars.css
empiWeb/: README.md  angular.json  package-lock.json  package.json
empiWeb/src/: index.html
empi_server/: manage.py
empi_server/emails/: fields.py  forms.py  models.py  serializers.py  views.py
empi_server/empi_server/: api.py  settings.py  urls.py
empi_server/mailer/: models.py  views.py
empi_server/research/: fields.py  models.py  permissions.py  serializers.py  views.py
empi_server/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/empiWeb/: package-lock.json
thesis-web/: index.html
thesisWeb/: index.html
(+199 files in other folders)
