[project]
name = "empi"
version = "2025.2.2"
description = "Backend for the Empirical research CMS"
authors = [{ name = "David Krchňavý", email = "krchnavy11@uniba.sk" }]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (~=5.1)",
    "django-cors-headers (~=4.7.0)",
    "djangorestframework (~=3.15.0)",
    "pycryptodome (~=3.21.0)",
    "python-magic(~=0.4.0)",
    "django-rest-knox (~=5.0)",
    "psycopg[binary](~=3.2.0)",
    "gunicorn(~=23.0.0)",
    "nanoid(~=2.0.0)",
    "html2text(~=2024.2.26)",
    "drf-spectacular(~=0.28.0)",
    "sentry-sdk[django](~=2.21.0)",
    "markdown(~=3.7)"
]

[tool.poetry]
package-mode = false

[project.urls]
"Homepage" = "https://gitea.znamafirma.xyz/znamafirma/empi"
"Bug Tracker" = "https://gitea.znamafirma.xyz/znamafirma/empi/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
